feat: make event-switch primary action AB#18405

--- a/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
@@ -1,6 +1,6 @@
 <ion-button
   (click)="btnAction()"
-  color="ibf-primary"
+  color="ibf-secondary"
   size="small"
   data-test="chat-about-trigger"
 >
