--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -92,7 +92,14 @@
             <div style="margin-left: 8px">
               <app-disaster-type></app-disaster-type>
             </div>
-            <div style="margin-left: 8px">
+            <div
+              style="
+                margin-left: 8px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+              "
+            >
               <ion-text style="font-size: 16px"
                 ><strong>{{
                   getJSDate((timelineState | async).today) | date: 'd LLL y'
