--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -29,7 +29,7 @@
 
   <!-- No event -->
   <app-event-speech-bubble
-    *ngIf="!eventState?.activeTrigger"
+    *ngIf="!eventState?.activeTrigger && !eventService.isOldEvent()"
     [type]="'no-event'"
     [event]="null"
     [selectedEvent]="eventState?.event?.eventName"
