fix: don't expand list for below-trigger event AB#18411

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -56,7 +56,7 @@
 
   <!-- =================================== -->
 
-  <ng-container *ngIf="event.eventName === selectedEvent">
+  <ng-container *ngIf="event.eventName === selectedEvent && event.thresholdReached">
     <p
       [innerHTML]="
         'chat-component.' + disasterTypeName + '.active-event.overview'
