fix: duration for KEN/ZWE AB#18412

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -25,6 +25,17 @@
               }
       "
     ></span>
+    <span *ngIf="event.duration"
+      [innerHTML]="
+        'chat-component.' +
+          disasterTypeName +
+          '.active-event-active-trigger.duration'
+          | translate
+            : {
+                duration: event.duration
+              }
+      "
+    ></span>
   </p>
 
   <p
