fix: duration in same sentence AB#18400

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -8,6 +8,7 @@
 >
   <p *ngIf="event.activeTrigger && event.thresholdReached">
     <span
+      *ngIf="!event.duration"
       [innerHTML]="
         'chat-component.' +
           disasterTypeName +
@@ -25,13 +26,21 @@
               }
       "
     ></span>
-    <span *ngIf="event.duration"
+    <span
+      *ngIf="event.duration"
       [innerHTML]="
         'chat-component.' +
           disasterTypeName +
-          '.active-event-active-trigger.duration'
+          '.active-event-active-trigger.welcome-duration'
           | translate
             : {
+                name: displayName,
+                startDate: event.startDate,
+                leadTime: event.firstLeadTimeLabel,
+                timeUnit: event.timeUnit,
+                disasterTypeLabel: disasterTypeLabel,
+                firstLeadTimeDate: event.firstLeadTimeDate,
+                eventName: event.eventName || disasterTypeLabel,
                 duration: event.duration
               }
       "
