fix: clearout messag per event + order by duration AB#18383

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -36,7 +36,7 @@
     [disasterTypeLabel]="disasterType?.label"
     [disasterTypeName]="disasterType?.disasterType"
     [typhoonLandfallText]="showTyphoonLandfallText(null)"
-    [clearOutMessage]="clearOutMessage"
+    [clearOutMessage]="getClearOutMessage(null)"
     [countryCodeISO3]="country?.countryCodeISO3"
     [areas]="stoppedAreas"
     [adminAreaLabelPlural]="adminAreaLabelPlural"
@@ -59,7 +59,7 @@
         [disasterTypeLabel]="disasterType?.label"
         [disasterTypeName]="disasterType?.disasterType"
         [typhoonLandfallText]="showTyphoonLandfallText(event)"
-        [clearOutMessage]="clearOutMessage"
+        [clearOutMessage]="getClearOutMessage(event)"
         [countryCodeISO3]="country?.countryCodeISO3"
         [areas]="activeAreas"
         [adminAreaLabelPlural]="adminAreaLabelPlural"
@@ -79,7 +79,7 @@
         [disasterTypeLabel]="disasterType?.label"
         [disasterTypeName]="disasterType?.disasterType"
         [typhoonLandfallText]="showTyphoonLandfallText(event)"
-        [clearOutMessage]="clearOutMessage"
+        [clearOutMessage]="getClearOutMessage(null)"
         [countryCodeISO3]="country?.countryCodeISO3"
         [areas]="stoppedAreas"
         [adminAreaLabelPlural]="adminAreaLabelPlural"
@@ -98,7 +98,7 @@
     [disasterTypeLabel]="disasterType?.label"
     [disasterTypeName]="disasterType?.disasterType"
     [typhoonLandfallText]="showTyphoonLandfallText(eventState?.event)"
-    [clearOutMessage]="clearOutMessage"
+    [clearOutMessage]="getClearOutMessage(null)"
     [countryCodeISO3]="country?.countryCodeISO3"
     [areas]="stoppedAreas"
     [adminAreaLabelPlural]="adminAreaLabelPlural"
