fix: various testing issues AB#18383

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -176,7 +176,7 @@
           : {
               name: displayName,
               startDate: event.startDate,
-              endDate: event.endDate,
+              endDate: event.endDateLabel,
               eventName: event.eventName
             }
     "
