--- a/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
@@ -11,7 +11,7 @@
   <strong>Sent by (volunteer):</strong> {{ markerProperties?.nameVolunteer }}
 </div>
 <ion-button
-  *ngIf="markerProperties?.photoUrl"
+  [disabled]="!markerProperties?.photoUrl"
   type="button"
   color="ibf-primary"
   shape="round"
