fix: bell icon AB#18551

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -58,6 +58,9 @@
             .evacuation-center-layer {
               background-image: url('../../../assets/markers/evacuation-center-icon.svg');
             }
+            .community-notification-layer {
+              background-image: url('../../../assets/markers/community-notification-icon.svg');
+            }
             .outline-layer {
               border: solid;
               border-color: var(--ion-color-ibf-outline-red) !important;
