fix: grey gradient in legend for non-triggered AB#18418

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -75,8 +75,11 @@
               [class.outline-layer]="
                 layer.name === IbfLayerName.alertThreshold && layer.active
               "
-              [class.aggregate-layer]="
-                layer.group === IbfLayerGroup.aggregates && layer.active
+              [class.aggregate-layer-triggered]="
+                layer.group === IbfLayerGroup.aggregates && layer.active && eventService.state.thresholdReached
+              "
+              [class.aggregate-layer-non-triggered]="
+                layer.group === IbfLayerGroup.aggregates && layer.active && !eventService.state.thresholdReached
               "
               [style.background]="
                 layer.active
