--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -67,10 +67,13 @@
               border-width: 3px !important;
               background: #2c3136 !important;
             }
-            .aggregate-layer {
-              background-image: url('../../../assets/icons/Legend_aggregate_layer.svg') !important;
-              background-position: center center;
-              background-origin: content-box;
+            .aggregate-layer-triggered {
+              background-image: url('../../../assets/icons/Legend_aggregate_layer-triggered.svg') !important;
+              background-size: cover !important;
+            }
+            .aggregate-layer-non-triggered {
+              background-image: url('../../../assets/icons/Legend_aggregate_layer-non-triggered.svg') !important;
+              background-size: cover !important;
             }
 
             .layer-control-label-col {
