--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -70,16 +70,21 @@
                 layer.name === IbfLayerName.evacuationCenters && layer.active
               "
               [class.community-notification-layer]="
-                layer.name === IbfLayerName.communityNotifications && layer.active
+                layer.name === IbfLayerName.communityNotifications &&
+                layer.active
               "
               [class.outline-layer]="
                 layer.name === IbfLayerName.alertThreshold && layer.active
               "
               [class.aggregate-layer-triggered]="
-                layer.group === IbfLayerGroup.aggregates && layer.active && eventService.state.thresholdReached
+                layer.group === IbfLayerGroup.aggregates &&
+                layer.active &&
+                eventService.state.thresholdReached
               "
               [class.aggregate-layer-non-triggered]="
-                layer.group === IbfLayerGroup.aggregates && layer.active && !eventService.state.thresholdReached
+                layer.group === IbfLayerGroup.aggregates &&
+                layer.active &&
+                !eventService.state.thresholdReached
               "
               [style.background]="
                 layer.active
