fix: update copy + move to en.json AB#18591

--- a/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
@@ -1,29 +1,56 @@
 <div style="margin-bottom: 5px; font-size: 14px">
-  <strong>Community notification</strong>
+  <strong>{{ 'map-popups.community-notification.title' | translate }}</strong>
 </div>
-<div><strong>Sent on:</strong> {{ formattedDate }}</div>
-<div><strong>Type of hazard:</strong> {{ markerProperties?.type }}</div>
-<div><strong>Name of village:</strong> {{ markerProperties?.nameVillage }}</div>
-<div>
-  <strong>What is observed:</strong> {{ markerProperties?.description }}
-</div>
-<div>
-  <strong>Sent by (volunteer):</strong> {{ markerProperties?.nameVolunteer }}
-</div>
+<div
+  [innerHTML]="
+    'map-popups.community-notification.date'
+      | translate: { formattedDate: formattedDate }
+  "
+></div>
+<div
+  [innerHTML]="
+    'map-popups.community-notification.hazard-type'
+      | translate: { type: markerProperties?.type }
+  "
+></div>
+<div
+  [innerHTML]="
+    'map-popups.community-notification.village-name'
+      | translate: { nameVillage: markerProperties?.nameVillage }
+  "
+></div>
+<div
+  [innerHTML]="
+    'map-popups.community-notification.description'
+      | translate: { description: markerProperties?.description }
+  "
+></div>
+<div
+  [innerHTML]="
+    'map-popups.community-notification.volunteer'
+      | translate: { nameVolunteer: markerProperties?.nameVolunteer }
+  "
+></div>
 <ion-button
+  *ngIf="markerProperties?.photoUrl"
   [disabled]="!markerProperties?.photoUrl"
   type="button"
   color="ibf-primary"
   shape="round"
-  (click)="openImagePopup(markerProperties?.photoUrl)"
-  >See attached photo
+  (click)="openPhotoPopup(markerProperties?.photoUrl)"
+  >{{ 'map-popups.community-notification.photo' | translate }}
   <ion-icon slot="start" name="image"></ion-icon>
 </ion-button>
+<div>
+  <strong>{{
+    'map-popups.community-notification.no-photo' | translate
+  }}</strong>
+</div>
 <ion-button
   type="button"
   color="ibf-primary"
   shape="round"
   fill="outline"
   (click)="dismissCommunityNotification(markerProperties?.pointDataId)"
-  >Dismiss notification</ion-button
+  >{{ 'map-popups.community-notification.delete' | translate }}</ion-button
 >
