--- a/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.scss
@@ -6,6 +6,7 @@
 .community-notification-info {
   margin-bottom: 5px;
   font-size: 14px;
+  word-wrap: normal;
 }
 
 .community-notification-button {
