--- a/interfaces/IBF-dashboard/src/app/components/community-notification-photo-popup/community-notification-photo-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-photo-popup/community-notification-photo-popup.component.html
@@ -7,8 +7,8 @@
       class="popover-close-button"
     ></ion-icon>
     <ion-card-title
-      [innerHTML]="'map-popups.community-notification.photo-popup.title'"
-    ></ion-card-title>
+
+    >{{ 'map-popups.community-notification.photo-popup.title' | translate }}</ion-card-title>
   </ion-card-header>
   <ion-card-content class="ion-padding-top">
     <img src="{{ url }}" />
