--- a/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-popup/community-notification-popup.component.html
@@ -55,7 +55,7 @@
 <ion-button
   class="community-notification-button"
   type="button"
-  color="danger"
+  color="ibf-primary"
   shape="round"
   fill="outline"
   (click)="dismissCommunityNotification(markerProperties?.pointDataId)"
