--- a/interfaces/IBF-dashboard/src/app/components/community-notification-photo-popup/community-notification-photo-popup.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/community-notification-photo-popup/community-notification-photo-popup.component.html
@@ -10,7 +10,7 @@
       'map-popups.community-notification.photo-popup.title' | translate
     }}</ion-card-title>
   </ion-card-header>
-  <ion-card-content class="ion-padding-top">
+  <ion-card-content class="ion-padding-top ion-text-center">
     <img src="{{ url }}" />
   </ion-card-content>
 </ion-card>
