fix: yellow-red gradient for legend of rainfall forecast AB#18678

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -86,6 +86,10 @@
                 layer.active &&
                 !eventService.state.thresholdReached
               "
+              [class.raster-layer-raifall-forecast]="
+                layer.name === IbfLayerName.rainfallForecast &&
+                layer.active
+              "
               [style.background]="
                 layer.active
                   ? layer.legendColor
