--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -87,8 +87,7 @@
                 !eventService.state.thresholdReached
               "
               [class.raster-layer-raifall-forecast]="
-                layer.name === IbfLayerName.rainfallForecast &&
-                layer.active
+                layer.name === IbfLayerName.rainfallForecast && layer.active
               "
               [style.background]="
                 layer.active
