feat: update logos component AB#18766

--- a/interfaces/IBF-dashboard/src/app/components/logos/logos.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/logos/logos.component.html
@@ -1,3 +1,9 @@
-<ng-container *ngFor="let logo of logos">
+<ng-container
+  *ngFor="
+    let logo of (country | async)?.countryLogos[
+      (disasterType | async)?.disasterType
+    ]
+  "
+>
   <img data-test="logo-image" src="assets/logos/{{ logo }}" />
 </ng-container>
